[package]
authors = "BcS114"
edition = "2023"
name = "security-bot"
version = "0.1.0"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serenity = {version = "0.10.7", features = ["framework", "standard_framework"]}
tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"]}

dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
poise = { git = "https://github.com/kangalioo/poise", rev = "9ebc7b5" }
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["rt-multi-thread"] }